2009-02-18  Tao Wang  <dancefire@gmail.com>

	* include/openclas/common.hpp: Add define NOMINMAX for MSVC
	* include/openclas/k_shortest_path.hpp:
		Add undef min. 
		Remove const of Graph arguments.
		Add empty graph process.
	* src/unit_test/unit_test_k_shortest_path.hpp: Complete the testcases for k_shortest_path.hpp.

2009-02-17  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/k_shortest_path.hpp:
		change path_type::nodelist to std::vector.
		change dag_all_paths() arguments.
		add code to handle empty graph.
		fix a bug, didn't add up the edge during the traverse.
		using property_map<>::const_type.
	* cpp/include/openclas/utility.hpp: Replace normal pointer with scoped_ptr<T>.
	* cpp/include/openclas/viterbi.hpp: new lines Unix=>Windows
	* cpp/src/unit_test/unit_test.cpp: Uncommented test for viterbi and k_shortest_path
	* cpp/src/unit_test/unit_test_k_shortest_path.hpp: Implemented part of the k_shortest_path testcases.
	* cpp/src/unit_test/unit_test_viterbi.hpp: Add testcases for viterbi algorithm.

2009-02-16  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/utf8_codecvt_facet.hpp: Merge utf8_codecvt_facet.hpp and utf8_codecvt_facet.cpp,
	so make the program become header only.

2009-02-15  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/common.hpp: Fix inconsistance new line(Unix->Windows)
	* cpp/include/openclas/segment.hpp:
	* cpp/include/openclas/utility.hpp:
		Replace WIN32 with _MSC_VER for detection of Visual C++	compiler. 
		Using utf8_codecvt_facet for UTF-8 encoding under Visual C++ compiler.
		under Visual C++. 
		Rename CodePage* to Charset*.
		Remove UCS[2,4]_[BE|LE] support. Keep UTF-8 only.
		Rename code_converter_type to codecvt_t to make it shorter.
		Add make_locale(enum Charset charset) to generate locale by given charset.
	* Add cpp/include/openclas/utf8_codecvt_facet.hpp: Copy utf8_codecvt_facet.hpp from Boost
		to this project for generating std::locale obj for UTF-8 charset under Visual C++, which